--- a/index.html
+++ b/index.html
@@ -5,15 +5,29 @@
     <title></title>
 </head>
 <body>
-    <img src="blackjacktable.png" alt="Blackjack table">
-    <!-- <div>
-        <p>
-        Desert Blackjack
-        </p>
-    </div> -->
+    <h1>Desert Blackjack</h1>
+    <div class="table"> 
+        <p id="dealer">Dealer</p>
+            <p id="dealAmount"></p>
+        <p id="user">
+            Player 1
+            <img src="" alt="" id="userCard">
+            <p id="cardAmount"></p>
+        </p>    
+        <p id="bet">Bet Amount: 0</p>
+        <p id="total">Total Amount: 100</p>
+
+        <input id="one" type="image" src="./Project/yellow_chip.png" value="1" />
+        <input id="five" type="image" src="./Project/yellow_chip5.png" value="5" />
+        <input id="ten" type="image" src="./Project/yellow_chip10.png" value="10" />
+
+    </div>
 
 
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/2.0.5/velocity.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/2.0.5/velocity.ui.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
