Fully functional without aces

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title></title>
 </head>
 <body>
+    
     <h1>Desert Blackjack</h1>
     <div class="table"> 
         <p id="dealer">Dealer </p>
@@ -12,6 +13,7 @@
         
         <p id="bet">Bet Amount: $0</p>
         <p id="total">Total Amount: $100</p>
+        <p id="contButton"></p>
 
         <input id="one" type="image" src="./Project/yellow_chip.png" value="1" />
         <input id="five" type="image" src="./Project/yellow_chip5.png" value="5" />
